# gui

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  compile_commands.json  config.hpp  demo.cpp  draw.cpp  gui.cpp  gui.hpp  internal.hpp  rectpack.hpp  tables.cpp  textedit.hpp  truetype.hpp  widgets.cpp
.github/: issue_template.md
.github/workflows/: build.yml  static-analysis.yml
backends/: allegro5.cpp  allegro5.hpp  android.cpp  android.hpp  dx10.cpp  dx10.hpp  dx11.cpp  dx11.hpp  dx12.cpp  dx12.hpp  dx9.cpp  dx9.hpp  glfw.cpp  glfw.hpp  glut.cpp  glut.hpp  metal.hpp  metal.mm  opengl2.cpp  opengl2.hpp  opengl3.cpp  opengl3.hpp  opengl3_loader.hpp  osx.hpp  osx.mm  sdl2.cpp  sdl2.hpp  sdl3.cpp  sdl3.hpp  sdlrenderer2.cpp  sdlrenderer2.hpp  sdlrenderer3.cpp  sdlrenderer3.hpp  vulkan.cpp  vulkan.hpp  wgpu.cpp  wgpu.hpp  win32.cpp  win32.hpp
docs/: BACKENDS.md  CHANGELOG.txt  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  FONTS.md  README.md  TODO.txt
examples/: README.txt
examples/example_allegro5/: README.md  example_allegro5.vcxproj  example_allegro5.vcxproj.filters  imconfig_allegro5.h  main.cpp
examples/example_android_opengl3/: CMakeLists.txt  main.cpp
examples/example_android_opengl3/android/app/src/main/: AndroidManifest.xml
examples/example_apple_metal/: README.md  main.mm
examples/example_apple_metal/example_apple_metal.xcodeproj/: project.pbxproj
examples/example_apple_metal/macOS/: MainMenu.storyboard
examples/example_apple_opengl2/: main.mm
examples/example_apple_opengl2/example_apple_opengl2.xcodeproj/: project.pbxproj
examples/example_emscripten_wgpu/: Makefile  README.md  main.cpp
examples/example_glfw_metal/: Makefile  main.mm
examples/example_glfw_opengl2/: Makefile  build_win32.bat  example_glfw_opengl2.vcxproj  example_glfw_opengl2.vcxproj.filters  main.cpp
examples/example_glfw_opengl3/: Makefile  Makefile.emscripten  build_win32.bat  example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  main.cpp
examples/example_glfw_vulkan/: CMakeLists.txt  build_win32.bat  build_win64.bat  example_glfw_vulkan.vcxproj  example_glfw_vulkan.vcxproj.filters  main.cpp
examples/example_glut_opengl2/: Makefile  example_glut_opengl2.vcxproj  example_glut_opengl2.vcxproj.filters  main.cpp
examples/example_null/: Makefile  main.cpp
examples/example_sdl2_directx11/: build_win32.bat  example_sdl2_directx11.vcxproj  example_sdl2_directx11.vcxproj.filters  main.cpp
examples/example_sdl2_metal/: Makefile  main.mm
examples/example_sdl2_opengl2/: Makefile  README.md  build_win32.bat  example_sdl2_opengl2.vcxproj  example_sdl2_opengl2.vcxproj.filters  main.cpp
examples/example_sdl2_opengl3/: Makefile  Makefile.emscripten  README.md  build_win32.bat  example_sdl2_opengl3.vcxproj  example_sdl2_opengl3.vcxproj.filters  main.cpp
examples/example_sdl2_sdlrenderer2/: Makefile  README.md  build_win32.bat  example_sdl2_sdlrenderer2.vcxproj  example_sdl2_sdlrenderer2.vcxproj.filters  main.cpp
examples/example_sdl2_vulkan/: build_win32.bat  example_sdl2_vulkan.vcxproj  example_sdl2_vulkan.vcxproj.filters  main.cpp
examples/example_sdl3_opengl3/: Makefile  Makefile.emscripten  README.md  build_win32.bat  example_sdl3_opengl3.vcxproj  example_sdl3_opengl3.vcxproj.filters  main.cpp
examples/example_sdl3_sdlrenderer3/: Makefile  build_win32.bat  example_sdl3_sdlrenderer3.vcxproj  example_sdl3_sdlrenderer3.vcxproj.filters  main.cpp
examples/example_win32_directx10/: build_win32.bat  example_win32_directx10.vcxproj  example_win32_directx10.vcxproj.filters  main.cpp
examples/example_win32_directx11/: build_win32.bat  example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters  main.cpp
examples/example_win32_directx12/: build_win32.bat  example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters  main.cpp
examples/example_win32_directx9/: build_win32.bat  example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters  main.cpp
examples/example_win32_opengl3/: build_win32.bat  example_win32_opengl3.vcxproj  example_win32_opengl3.vcxproj.filters  main.cpp
examples/libs/emscripten/: emscripten_mainloop_stub.h  shell_minimal.html
examples/libs/glfw/include/GLFW/: glfw3.h  glfw3native.h
examples/libs/usynergy/: uSynergy.c  uSynergy.h
include/: config.hpp  internal.hpp  single_file.hpp  truetype.hpp
misc/: README.txt
misc/cpp/: README.txt  stdlib.cpp  stdlib.hpp
misc/debuggers/: README.txt  gui.gdb  gui.natstepfilter  gui.natvis
misc/fonts/: binary_to_compressed_c.cpp
misc/freetype/: README.md  freetype.cpp  freetype.hpp
misc/single_file/: single_file.hpp
